# tensorflow_cpp

./: CMakeLists.txt  README.md  requirements.txt
fashion_mnist/: load_predict.cpp  load_predict.py  load_predict_c_api.cc  load_predict_cnn.cpp  load_predict_cnn_c_api.cc  model.py  train.py
fashion_mnist/utils/: keras_to_tensorflow.py  mat2tensor.h  mat2tensor_c.h  mat2tensor_c_cpi.h
simple/: load_simple_net.cpp  load_simple_net.py  load_simple_net_c_api.cc  simple_net.py
simple/log/.../: events.out.tfevents.1537345394.slam  events.out.tfevents.1537345428.slam
utils/: TFUtils.cpp  TFUtils.hpp  tf_utils.hpp
